# libboxmap

./: README.md  boxmap.c  boxmap.h  buddy.h  err.c  err.h  extalloc.c  map.h  meson.build
test/: meson.build  test1.c  test2.c
